--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="slider.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/slider.css" />
   </head>
   <body>
     <div class="card">
       <div>
-        <img src="logo.png" alt="logo" / class="logo">
+        <img src="logo.png" alt="logo" class="logo">
 
         <div class="slider">
           <input type="radio" name="color" id="red" class="slider__input" />
@@ -38,13 +38,13 @@
           <img
             src="uarm.jpg"
             alt="abibas shoes"
-            class="slider__shoes slider__shoes--abibas"
+            class="slider__shoes slider__shoes--conv"
           />
 
           <img
             src="conv.JPG"
             alt="abibas shoes"
-            class="slider__shoes slider__shoes--abibas"
+            class="slider__shoes slider__shoes--uarm"
           />
         </div>
       </div>
